# gstreamer

./: .gitlab-ci.yml  .gitlab-image-tags.yml  README.md  meson.build  meson_options.txt
ci/data/fedora/: dynamic.txt
ci/docker/fedora/: install-deps.sh
ci/docker/windows/: install_rust.ps1
ci/scripts/: install-rust.sh
cmake/: FindGStreamer.cmake  meson.build
girs/: GES-1.0.gir  Gst-1.0.gir  GstAnalytics-1.0.gir  GstCuda-1.0.gir  GstRtspServer-1.0.gir  GstVideo-1.0.gir  GstVulkan-1.0.gir
scripts/: meson.build
subprojects/gst-docs/examples/tutorials/: meson.build
subprojects/gst-docs/examples/tutorials/android/android-tutorial-1/jni/: CMakeLists.txt
subprojects/gst-docs/examples/tutorials/android/android-tutorial-2/jni/: CMakeLists.txt
subprojects/gst-docs/examples/tutorials/android/android-tutorial-3/jni/: CMakeLists.txt
subprojects/gst-docs/examples/tutorials/android/android-tutorial-4/jni/: CMakeLists.txt
subprojects/gst-docs/examples/tutorials/android/android-tutorial-5/jni/: CMakeLists.txt
subprojects/gst-docs/markdown/installing/: on-linux.md
subprojects/gst-docs/symbols/: symbol_index.json
subprojects/gst-editing-services/ges/: ges-track.c  ges-video-uri-source.c
subprojects/gst-editing-services/plugins/nle/: nlecomposition.c
subprojects/gst-libav/ext/libav/: gstav.c  gstavdemux.c  gstavviddec.c
subprojects/gst-plugins-bad/: meson_options.txt
subprojects/gst-plugins-bad/ext/: meson.build
subprojects/gst-plugins-bad/ext/analyticsoverlay/: gstsegmentationoverlay.c
subprojects/gst-plugins-bad/ext/nvdswrapper/: gstnvdsdewarp.h  meson.build
subprojects/gst-plugins-bad/ext/onnx/: gstonnxclient.cpp  gstonnxinference.cpp  meson.build
subprojects/gst-plugins-bad/ext/opencv/: meson.build
subprojects/gst-plugins-bad/ext/srt/: gstsrtlistenerconnection.c  gstsrtobject.c
subprojects/gst-plugins-good/: meson.build
subprojects/gst-plugins-good/docs/: gst_plugins_cache.json
subprojects/gst-python/testsuite/: meson.build  test_analytics.py
subprojects/gstreamer/: meson.build
subprojects/gstreamer/cmake/: FindGStreamer.cmake  meson.build
subprojects/gstreamer/gst/: gstidstr-private.h  gstidstr.c  gstidstr.h  gstinfo.c  gstinfo.h  gstmeta.c  gstmeta.h  gstpad.c  gstquark.c  gstquark.h  gstutils.c  gstutils.h
subprojects/gstreamer/tools/: gst-inspect.c
(+165 files in other folders)
